Add test to CI pipeline

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,9 +2,20 @@ image: "registry.michelada.io/michelada/dockerfiles/ci/rails:2.7"
 stages:
   - test
 
+variables:
+  RAILS_ENV: "test"
+
 rubocop:
   stage: test
   script:
     - yarn install
     - bundle install
     - bundle exec rubocop
+
+test:
+  stage: test
+  script:
+    - yarn install
+    - bundle install
+    - bundle exec rake db:create db:schema:load
+    - bundle exec rake test
