--- a/test/fixtures/accounts.yml
+++ b/test/fixtures/accounts.yml
@@ -4,8 +4,10 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
+one:
+  email: user@example.com
+  #encrypted_password: "secret"
 # column: value
 #
-two: {}
+#two: {}
 # column: value
