Add controllers for devise, and login test

--- a/test/fixtures/accounts.yml
+++ b/test/fixtures/accounts.yml
@@ -6,8 +6,10 @@
 #
 one:
   email: user@example.com
-  #encrypted_password: "secret"
+  encrypted_password: "secret"
 # column: value
 #
-#two: {}
+two:
+  email: other@example.com
+  encrypted_password: "secret"
 # column: value
