--- a/test/fixtures/books.yml
+++ b/test/fixtures/books.yml
@@ -5,21 +5,21 @@ one:
   author: MyString
   genre: 1
   publisher: MyString
-  release_year: MyString
-  description: MyText
+  release_year: "2000"
+  description: <%= Faker::Lorem.paragraph %>
   format_type: 1
-  length: MyString
+  length: "200"
   length_type: 1
-  isbn: MyString
+  isbn: 000-000-0000-2
 
 two:
   title: MyString
   author: MyString
   genre: 1
   publisher: MyString
-  release_year: MyString
-  description: MyText
+  release_year: "2000"
+  description: <%= Faker::Lorem.paragraph %>
   format_type: 1
-  length: MyString
+  length: "200"
   length_type: 1
-  isbn: MyString
+  isbn: 000-000-0000-3
