--- a/test/fixtures/books.yml
+++ b/test/fixtures/books.yml
@@ -10,7 +10,7 @@ one:
   format_type: 1
   length: "200"
   length_type: 1
-  isbn: 000-000-1000-00-2
+  isbn: "0000001000002"
 
 two:
   title: MyString
@@ -22,4 +22,4 @@ two:
   format_type: 1
   length: "200"
   length_type: 1
-  isbn: 000-000-3000-00-3
+  isbn: "0000003000003"
