Update for join book and Publisher models

--- a/test/fixtures/publishers.yml
+++ b/test/fixtures/publishers.yml
@@ -3,7 +3,9 @@
 one:
   name: MyString
   country: MyString
+  id: "1"
 
 two:
-  name: MyString
+  name: MyOtherString
   country: MyString
+  id: "2"
