--- a/test/fixtures/authors.yml
+++ b/test/fixtures/authors.yml
@@ -5,9 +5,11 @@ one:
   country: MyString
   born: "1999"
   died: "1999"
+  id: "1"
 
 two:
-  name: MyString
+  name: MyOtherString
   country: MyString
   born: "1999"
   died: "1999"
+  id: "2"
