--- a/test/fixtures/books.yml
+++ b/test/fixtures/books.yml
@@ -3,7 +3,7 @@
 one:
   title: MyString
   genre: 1
-  publisher: MyString
+  publisher_id: 2
   release_year: "2000"
   description: Esto debe tener más de veinte carácteres para pasar... Esto es lo que falla?
   format_type: 1
@@ -14,7 +14,7 @@ one:
 two:
   title: MyString
   genre: 1
-  publisher: MyString
+  publisher_id: 1
   release_year: "2000"
   description: <%= Faker::Lorem.paragraph %>
   format_type: 1
