--- a/test/fixtures/authors.yml
+++ b/test/fixtures/authors.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
+  name: Juanjo
   country: MyString
   born: "1999"
   died: "1999"
